<resources>
    <string name="app_name">Calculator App</string>
    <string name="title_name">Calculator</string>
    <string name="first_number">Enter first number...</string>
    <string name="second_number">Enter second number...</string>

    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
</resources>